# german-offensive-language-robustness

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_preprocessing_and_split.ipynb  03_perturbations.ipynb  04_baseline_model.ipynb  05_transformer_model.ipynb  06_robustness_evaluation.ipynb
results/: baseline_grid_search.csv  baseline_val_report.txt
results/robustness/: baseline_scores.csv  clean_reference.txt  fragmentation.csv  oov_rates.csv  transformer_scores_per_seed.csv  transformer_scores_summary.csv
results/transformer/gbert-base/: summary.csv
results/transformer/gbert-base/seed_123/: config.json  training_history.csv
results/transformer/gbert-base/seed_42/: training_history.csv
results/transformer/gbert-base/seed_67/: training_history.csv
src/: config.py  data.py  evaluate.py  model.py  perturbations.py  robustness.py  transformer_models.py
